tests/idris2/error/perror019/ImplError.idr
data Foo = Bar

implementation Show Foo where
  show Bar = "a Foo"
  f
